clusters/apps/env/production/social/thelounge/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: thelounge
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
    external-dns/public: "false"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`irc.${FAMILY_DOMAIN}`)"
      services:
        - name: thelounge
          port: 9000
      middlewares:
        - name: oauth-auth
          namespace: auth-system
        - name: oauth-errors
          namespace: auth-system
    - kind: Rule
      match: "Host(`irc.${FAMILY_DOMAIN}`) && PathPrefix(`/oauth2/`)"
      priority: 15
      middlewares:
        - name: oauth-headers
          namespace: auth-system
      services:
        - name: google-auth-oauth2-proxy
          namespace: auth-system
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: irc.${FAMILY_DOMAIN}
